--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "start": "nodemon src/index.js",
-    "build": "node src/index.js"
+    "build": "node src/index.js",
+    "migrate": "knex migrate:latest --knexfile src/models/knexfile.js"
   },
   "author": "arya",
   "license": "MIT",
@@ -13,8 +14,10 @@
     "nodemon": "latest"
   },
   "dependencies": {
-    "express": "latest",
     "cors": "latest",
-    "dotenv": "latest"
+    "dotenv": "latest",
+    "express": "latest",
+    "knex": "^2.0.0",
+    "mysql2": "^2.3.3"
   }
 }
